k8s/chat-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odc-chat-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: odc-chat
  ports:
    - port: 80
      targetPort: 8080
